# SAM_project

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: ablation_grasper.json  benchmark_6clips.json  refinement_result.json
scripts/: build_video.py  check_env.py  check_hf_access.py  download_data.py  explore_dataset.py  inspect_sam3_api.py  run_evaluation.py  run_prompt_ablation.py  run_tracking.py
src/sam3_seg/: __init__.py
src/sam3_seg/data/: __init__.py  dataset.py  mask_utils.py
src/sam3_seg/evaluation/: __init__.py  evaluator.py  metrics.py
src/sam3_seg/models/: __init__.py  sam3_image.py  sam3_video.py
src/sam3_seg/refinement/: __init__.py  interactive.py
src/sam3_seg/utils/: __init__.py  config.py  env.py
src/sam3_seg/visualization/: __init__.py
tests/: test_mask_utils.py  test_metrics.py
