[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3-seg"
version = "0.1.0"
description = "Text-prompted video segmentation and tracking of laparoscopic surgery with Meta SAM 3"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Shivam" }]
dependencies = [
    "numpy>=1.26,<2",
    "opencv-python>=4.9,<4.11",
    "scipy>=1.11,<1.16",
    "pillow>=10.0",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4",
    "numpy>=1.26,<2",
    "opencv-python>=4.9,<4.11",
    "scipy>=1.11,<1.16",
    "python-dotenv>=1.0",
    "kagglehub>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipywidgets>=8.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100